--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Turasuna.id - Turats Academy: Platform pengajaran al-Qur'an dan ilmu keislaman klasik & kontemporer, daring & luring. Kurikulum berstandar Arab, pengajar alumni Al-Azhar." />
-  <title>Turasuna.id — Turats Academy</title>
+  <title>Turosuna.id</title>
+
+  <!-- 🔹 Favicon -->
+  <link rel="icon" type="image/png" href="asset/logo.png" />
+
+  <!-- 🔹 Open Graph / WhatsApp Thumbnail -->
+  <meta property="og:title" content="LECIA Collection — Katalog Produk Elegan" />
+  <meta property="og:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
+  <meta property="og:image" content="asset/bg.png" />
+  <meta property="og:url" content="https://nuraddiniy99.github.io/turosuna/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Primary theme colors (ambil dari logo) -->
   <style>
