--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- 🔹 Open Graph / WhatsApp Thumbnail -->
   <meta property="og:title" content="LECIA Collection — Katalog Produk Elegan" />
   <meta property="og:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
-  <meta property="og:image" content="asset/bg.png" />
+  <meta property="og:image" content="https://nuraddiniy99.github.io/turosuna/asset/bg.png" />
   <meta property="og:url" content="https://nuraddiniy99.github.io/turosuna/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -800,3 +800,4 @@
 
 </body>
 </html>
+
