--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="asset/logo.png" />
 
   <!-- 🔹 Open Graph / WhatsApp Thumbnail -->
-  <meta property="og:title" content="LECIA Collection — Katalog Produk Elegan" />
+  <meta property="og:title" content="Turosuna.id - Turots Academy"/>
   <meta property="og:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
   <meta property="og:image" content="https://nuraddiniy99.github.io/turosuna/asset/bg.png" />
   <meta property="og:url" content="https://nuraddiniy99.github.io/turosuna/" />
@@ -800,4 +800,5 @@
 
 </body>
 </html>
+
 
