--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Turosuna.id</title>
-
-  <!-- 🔹 Favicon -->
-  <link rel="icon" type="image/png" href="asset/logo.png" />
-
-  <!-- 🔹 Open Graph / WhatsApp Thumbnail -->
-  <meta property="og:title" content="Turosuna.id - Turots Academy"/>
-  <meta property="og:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
-  <meta property="og:image" content="https://nuraddiniy99.github.io/turosuna/asset/bg.png" />
-  <meta property="og:url" content="https://nuraddiniy99.github.io/turosuna/" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
+  
+    <!-- 🔹 Favicon -->
+    <link rel="icon" type="image/png" href="asset/logo.png" />
+  
+    <!-- 🔹 Open Graph / WhatsApp Thumbnail -->
+    <meta property="og:title" content="Turosuna.id - Turots Academy" />
+    <meta property="og:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
+  
+    <!-- 🔹 Thumbnail khusus WhatsApp -->
+    <meta property="og:image" content="https://i.ibb.co/G3HLSXFH/bg.png" />
+    <meta property="og:image:secure_url" content="https://i.ibb.co/G3HLSXFH/bg.png" />
+    <meta property="og:image:type" content="image/png" />
+  
+    <!-- 🔹 Ukuran disesuaikan untuk gambar landscape (16:9) -->
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nuraddiniy99.github.io/turosuna/" />
+  
+    <!-- 🔹 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Turosuna.id - Turots Academy" />
+    <meta name="twitter:description" content="Platform pengajaran al-Qur'an dan ilmu-ilmu keislaman klasik & kontemporer." />
+    <meta name="twitter:image" content="https://i.ibb.co/G3HLSXFH/bg.png" />
 
   <!-- Primary theme colors (ambil dari logo) -->
   <style>
@@ -800,5 +814,6 @@
 
 </body>
 </html>
+
 
 
